website/websites/u64q/code/fibonacci.3.pyston.log

 Fri, 30 Oct 2020 19:09:46 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-3.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-3.pyston", line 22
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
